--- a/pkgbuild/PKGBUILD
+++ b/pkgbuild/PKGBUILD
@@ -6,8 +6,8 @@
 
 _basekernel=6.7
 _basever=${_basekernel//.}
-_kernelname=-BIGLINUX
-pkgbase=linux-biglinux-latest
+_kernelname=-XIVASTUDIO
+pkgbase=linux-xivastudio-latest
 pkgname=("$pkgbase" "$pkgbase-headers")
 pkgver=6.7.3
 pkgrel=1
@@ -116,7 +116,7 @@ build() {
   make ${MAKEFLAGS} LOCALVERSION= bzImage modules
 }
 
-package_linux-biglinux-latest() {
+package_linux-xivastudio-latest() {
   pkgdesc="The ${pkgbase/linux/Linux} kernel and modules"
   depends=('coreutils' 'linux-firmware' 'kmod' 'initramfs')
   optdepends=('wireless-regdb: to set the correct wireless channels of your country')
@@ -140,7 +140,7 @@ package_linux-biglinux-latest() {
   echo "${_basekernel}-${CARCH}" | install -Dm644 /dev/stdin "${pkgdir}/usr/lib/modules/${_kernver}/kernelbase"
 
   # add kernel version
-  echo "${pkgver}-${pkgrel}-biglinux x64" > "${pkgdir}/boot/${pkgbase}-${CARCH}.kver"
+  echo "${pkgver}-${pkgrel}-xivastudio x64" > "${pkgdir}/boot/${pkgbase}-${CARCH}.kver"
 
   # remove build and source links
   rm "${pkgdir}"/usr/lib/modules/${_kernver}/build
@@ -149,7 +149,7 @@ package_linux-biglinux-latest() {
   depmod -b "${pkgdir}/usr" -F System.map "${_kernver}"
 }
 
-package_linux-biglinux-latest-headers() {
+package_linux-xivastudio-latest-headers() {
   pkgdesc="Header files and scripts for building modules for ${pkgbase/linux/Linux} kernel"
   depends=('gawk' 'python' 'libelf' 'pahole')
   provides=("linux-headers=$pkgver")
